--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ textarea {
 html {
   background-color: #fff;
   height: 100%;
+  width:100%;
 }
 
 body {
@@ -112,20 +113,26 @@ body {
   /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
   display:flex;
+  flex-flow: row wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
+  display: flex;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
-  display:flex;
+  font-size: 1.25em;
   width: 30%;
   justify-content:center;
   align-items:center;
+  height:auto;
+}
+
+.wrapper span {
+    font-family:'Lora', sans-serif;
+    font-size:1.3em;
 }
 
 
